--- a/serve/package.json
+++ b/serve/package.json
@@ -17,11 +17,14 @@
     "html-pdf": "^3.0.1",
     "node": "^19.0.1",
     "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
     "sequelize": "^6.25.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/nodemailer": "^6.4.6"
+    "@types/nodemailer": "^6.4.6",
+    "@types/pg": "^8.6.5"
   }
 }
