--- a/serve/.env
+++ b/serve/.env
@@ -1,8 +1,8 @@
 PORT= 3000
 
-DB_DATABASE="hackaton"
+DB_DATABASE="Hackaton"
 DB_USERNAME="postgres"
-DB_PASSWORD="alunocrieti"
-DB_HOST="localhost"
+DB_PASSWORD="l0403sulz"
+DB_HOST="177.44.248.47"
 DB_PORT="5432"
 DB_DIALECT="postgres"
