--- a/serve/.env.example
+++ b/serve/.env.example
@@ -1,8 +1,8 @@
-PORT=
+PORT= 3000
 
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE="Hackaton"
+DB_USERNAME="postgres"
 DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DB_DIALECT=
+DB_HOST="177.44.248.47"
+DB_PORT="5432"
+DB_DIALECT="postgres"
